Set up firebase

--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,26 @@
 {
   "hosting": {
-    "public": "templates",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "headers": [
+      {
+        "source": "/**",
+        "headers": [{
+          "key":"Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }]
+      },
+      {
+        "source": "**/*.*",
+        "headers": [{
+          "key":"Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }]
+      }
     ]
   }
 }
