--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "pipescore",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "An online bagpipe notation app.",
+  "main": "firebase.json",
   "scripts": {
-    "start": "node index.js",
+    "start": "firebase serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://TheDragonsApprentice@bitbucket.org/TheDragonsApprentice/pipescore.git"
+    "url": "https://github.com/ArchieMaclean/Pipescore"
   },
   "author": "Archie Maclean",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/TheDragonsApprentice/pipescore#readme",
+  "license": "GNU General Public License v3.0",
+  "homepage": "https://github.com/ArchieMaclean/Pipescore#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "firebase-tools": "^7.6.0",
-    "nodemon": "^1.19.1",
-    "pug": "^2.0.4"
+    "firebase-tools": "^7.6.0"
   }
 }
