--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "GNU General Public License v3.0",
   "homepage": "https://github.com/ArchieMaclean/Pipescore#readme",
   "dependencies": {
-    "firebase-tools": "^7.6.0"
+    "class-transformer": "^0.2.3",
+    "firebase-tools": "^7.6.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
