Got rewrites to pipescore kinda working

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,13 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "rewrites": [{
+      "source": "/score/**",
+      "destination": "/pipescore.html"
+    }, {
+      "source": "!/@**/**.(js|css|png|ttf|ico)",
+      "destination": "/"
+    } ],
     "headers": [
       {
         "source": "/**",
